--- a/css/site.css
+++ b/css/site.css
@@ -7,4 +7,8 @@ section#mentions {
   background-size: cover;
   -o-background-size: cover;
 }
+div #scrollingScrollingScrollingKeepThoseWagonsScrolling {
+	font-family: "Comic Sans MS";
+	font-size: 2.5em;
+}
 /*# sourceMappingURL=site.css.map */
