--- a/less/site.less
+++ b/less/site.less
@@ -12,3 +12,8 @@ section#mentions {
     background-size: cover;
     -o-background-size: cover;
 }
+
+div #scrollingScrollingScrollingKeepThoseWagonsScrolling {
+	font-family: "Comic Sans MS";
+	font-size: 2.5em;
+}
