--- a/css/site.css
+++ b/css/site.css
@@ -51,3 +51,7 @@ div #scrollingScrollingScrollingKeepThoseWagonsScrolling {
                 5px 5px #fe4902, 
                 6px 6px #fe4902;
 }
+
+#birdy {
+  background: black !important;
+}
