--- a/css/site.css
+++ b/css/site.css
@@ -55,3 +55,18 @@ div #scrollingScrollingScrollingKeepThoseWagonsScrolling {
 #birdy {
   background: black !important;
 }
+
+.blink {
+  animation: blink 1s steps(5, start) infinite;
+  -webkit-animation: blink 1s steps(5, start) infinite;
+}
+@keyframes blink {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink {
+  to {
+    visibility: hidden;
+  }
+}
