--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 section#mentions {
   width: 100%;
-  padding: 50px 0;
+  padding: 0 0;
   color: white;
   -webkit-background-size: cover;
   -moz-background-size: cover;
