--- a/css/site.css
+++ b/css/site.css
@@ -56,6 +56,12 @@ div #scrollingScrollingScrollingKeepThoseWagonsScrolling {
   background: black !important;
 }
 
+.ad-dance{
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+
 .blink {
   animation: blink 1s steps(5, start) infinite;
   -webkit-animation: blink 1s steps(5, start) infinite;
