--- a/css/site.css
+++ b/css/site.css
@@ -64,6 +64,12 @@ div #scrollingScrollingScrollingKeepThoseWagonsScrolling {
   left: 0;
 }
 
+.ad-dance{
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+
 .blink {
   animation: blink 1s steps(5, start) infinite;
   -webkit-animation: blink 1s steps(5, start) infinite;
